fix:some bugs and refactor:swagger
